# my-data-backup

./: .dockerignore  .flake8  .gitignore  DOCKER.md  Dockerfile  MAKEFILE_INTEGRATION.md  Makefile  Makefile.docker  README.md  __init__.py  docker-compose.yml  make_preview.py  move.py  move2.py  pyproject.toml  requirements-freeze.txt  requirements.txt  test_common_logger.py
common/: logger.py
docs/: code-formatting.md  config-manager-refactoring.md  dependencies-guide.md  development-package.md  file-extensions-unification.md  gui-modularization-plan.md
legacy/: test_common_logger.py
legacy/common/: __init__.py
legacy/make_preview/: make_preview.py
legacy/move/: gui.py  main.py
legacy/photo_organizer/: __init__.py  gui.py  main.py
legacy/photo_organizer/test/: env_test.py  minimal_test.py
move/: README.md  __init__.py  gui.py  main.py
photo_organizer/: README.md  config.py  gui.py  logger.py  main.py  photo_organizer_gui.py  sync_photos.py
photo_organizer/test/: env_test.py  minimal_test.py
samples/: gui.sh  move.sh  photo_organizer.sh
scripts/: check_package.sh  docker-gui.sh
src/: __init__.py  main.py
src/app/: __init__.py
src/app/cli/: __init__.py  base.py  move.py  photo_organizer.py
src/app/gui/: __init__.py  app.py  app_with_config.py  enhanced_app.py  simple_app.py
src/app/gui/base/: __init__.py  base_tab.py
src/app/gui/modules/move/: __init__.py  tab.py
src/app/gui/modules/photo_organizer/: __init__.py  tab.py  view.py
src/core/: __init__.py
src/core/config/: __init__.py  config.py  config_manager.py  file_extensions.py  mixins.py
src/core/domain/models/: __init__.py
src/core/domain/repositories/: __init__.py
src/core/services/: __init__.py  move_service.py  photo_organizer_service.py
src/infrastructure/: __init__.py  repositories.py
src/infrastructure/logging/: __init__.py
src/tests/: run_tests.py  test_domain_models.py  test_modular_config.py  test_repositories.py  test_services.py
